syntax = "proto3";

package rpcmessage;

option go_package = "github.com/ISSuh/sos/infrastructure/transport/message";

import "google/protobuf/wrappers.proto";
import "object.proto";
import "object_metadata.proto";

message ObjectMetadataRequest {
  int64 objectID = 1;
  string group = 2;
  string partition = 3;
  string path = 4;
  string name = 5;
}

message ObjectMetadataList {
  repeated message.ObjectMetadata metadata = 1;
}

service MetadataRegistry {
  rpc Put(message.Object) returns (message.ObjectMetadata) {}
  rpc Delete(message.ObjectMetadata) returns (google.protobuf.BoolValue) {}
  rpc GetByObjectName(ObjectMetadataRequest) returns (message.ObjectMetadata) {}
  rpc GetByObjectID(ObjectMetadataRequest) returns (message.ObjectMetadata) {}
  rpc FindMetadataOnPath(ObjectMetadataRequest) returns (ObjectMetadataList) {}
}
